# FaceRecognition_CPP

./: CMakeCache.txt  CMakeLists.txt  FR.cpp  Makefile  README.md  cmake_install.cmake  log  mytest.cbp
dlib_build/: Makefile  dlib.cbp
dlib_build/cuda_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
dlib_build/cudnn_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
dlib_build/test_for_libjpeg_build/: CMakeCache.txt  Makefile  cmake_install.cmake
dlib_build/test_for_libpng_build/: CMakeCache.txt  Makefile  cmake_install.cmake
faceRecLib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  faceRec.cpp  faceRec.hpp
faceRecLib/dlib_build/: Makefile  cmake_install.cmake
faceRecLib/dlib_build/cuda_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
faceRecLib/dlib_build/cudnn_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
faceRecLib/dlib_build/test_for_libjpeg_build/: CMakeCache.txt  Makefile  cmake_install.cmake  libjpeg_test
faceRecLib/dlib_build/test_for_libpng_build/: CMakeCache.txt  Makefile  cmake_install.cmake  libpng_test
